--- a/Config/Localization/Game_Gather.ini
+++ b/Config/Localization/Game_Gather.ini
@@ -15,6 +15,7 @@ CulturesToGenerate=ru
 CommandletClass=GatherTextFromAssets
 IncludePathFilters=Content/ThirdPerson/*
 ExcludePathFilters=Content/Localization/*
+ExcludePathFilters=%LOCPROJECTROOT%Content/Localization/Game/*
 PackageFileNameFilters=*.umap
 PackageFileNameFilters=*.uasset
 ShouldExcludeDerivedClasses=false
